Testing Commit again, added comment stating where to place date range selector.

--- a/Rail/Rail/templates/Railserve/html/details1.html
+++ b/Rail/Rail/templates/Railserve/html/details1.html
@@ -31,6 +31,7 @@
                         }
                     </style>
                     <h2>Vehicle 1 Data </h2>
+			<!--Place Date Range Search Here!-->
                     <table class="table table-inverse table-hover">
                         <thead>
                           <tr>
