Fixed styles. Removed style tags within details1 page. Take note on the ALLOWED_HOSTS var, I had to comment it out on my end to get it to work. I uncommented it so it can work on Nate's Pi again.

--- a/Rail/Rail/static/CSS/front_page.css
+++ b/Rail/Rail/static/CSS/front_page.css
@@ -7,10 +7,32 @@
 			text-align: center;
 			text-decoration: underline;
 		}
+        .table td
+        {
+            text-align: center;
+        }
+        #map
+        {
+            height: 400px;
+            width: 100%;
+        }
+        a
+        {
+            color: #FFFFFF;
+            text-decoration: none;
+        }
 		a:hover
 		{
 			background-color: #cccccc;
 		}
+        ul
+        {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            color: #FFFFFF;
+            text-decoration: none;
+        }
 		#header p
 		{
 			color: #FFFFFF;
