Changed the Detail view. Changed the database design and implementation. Changed the models accordingly. Changed the javascript of the detail view.
Signed-off-by: joel Kamdem <kamdem16@gmail.com>

--- a/Rail/Rail/templates/Railserve/html/details3.html
+++ b/Rail/Rail/templates/Railserve/html/details3.html
@@ -3,183 +3,196 @@
 <!--Login Page -->
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>RailServe Login</title>
-	<link rel="stylesheet" href="front_page.css">
-	<!--<link rel="stylesheet" type="text/css" href="Bootstrap/css/bootstrap.min.css"> -->
-	<!--JavaScript -->
-	<script type="text/javascript">
-		/* =============================
-		This script generates sample text for the body content. 
-		You can remove this script and any reference to it. 
-		 ============================= */
-		var bodyText=["The smaller your reality, the more convinced you are that you know everything.", "If the facts don't fit the theory, change the facts.", "The past has no power over the present moment.", "This, too, will pass.", "</p><p>You will not be punished for your anger, you will be punished by your anger.", "Peace comes from within. Do not seek it without.", "<h3>Heading</h3><p>The most important moment of your life is now. The most important person in your life is the one you are with now, and the most important activity in your life is the one you are involved with now."]
-		function generateText(sentenceCount){
-			for (var i=0; i<sentenceCount; i++)
-			document.write(bodyText[Math.floor(Math.random()*7)]+" ")
-		}
-	</script>	
-	<!--End JavaScript -->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>RailServe Login</title>
+    <link rel="stylesheet" href="front_page.css">
+    <!--<link rel="stylesheet" type="text/css" href="Bootstrap/css/bootstrap.min.css"> -->
+    <!--JavaScript -->
+    <script type="text/javascript">
+        /* =============================
+         This script generates sample text for the body content.
+         You can remove this script and any reference to it.
+         ============================= */
+        var bodyText = ["The smaller your reality, the more convinced you are that you know everything.", "If the facts don't fit the theory, change the facts.", "The past has no power over the present moment.", "This, too, will pass.", "</p><p>You will not be punished for your anger, you will be punished by your anger.", "Peace comes from within. Do not seek it without.", "<h3>Heading</h3><p>The most important moment of your life is now. The most important person in your life is the one you are with now, and the most important activity in your life is the one you are involved with now."]
+        function generateText(sentenceCount) {
+            for (var i = 0; i < sentenceCount; i++)
+                document.write(bodyText[Math.floor(Math.random() * 7)] + " ")
+        }
+    </script>
+    <!--End JavaScript -->
 </head>
 
 <body>
 
-	<header id="header"><p>Railserve Tracking Login</p></header>
+<header id="header"><p>Railserve Tracking Login</p></header>
 
-	<div id="container">
+<div id="container">
 
-		<main id="center" class="column">
-			<article>
-			<h2><b>Tracking Database</b></h2>
-			<h2>Welcome to Vehicle 3's Page!</h2>
-			<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+    <main id="center" class="column">
+        <article>
+            <h2><b>Tracking Database</b></h2>
+            <h2>Welcome to Vehicle 3's Page!</h2>
+            <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+            </head>
+            <body>
 
-<div class="container">
-  <h2>Device Selection</h2>         
-  <table class="table table-bordered table-hover">
-    <thead>
-      <tr>
-        <th>Vehicle</th>
-        <th>Hardware ID</th>
-        <th>Purpose</th>
-		<th>Details</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Tram 1</td>
-        <td>AAAA1</td>
-        <td>Transport Shipment A</td>
-		<td><button onclick="window.location='details1.html'" button type="button" class="btn btn-info">Details</button></td>
-      </tr>
-      <tr>
-        <td>Tram 2</td>
-        <td>BBBB2</td>
-        <td>Transport Shipment B</td>
-		<td><button onclick="window.location='details2.html'" button type="button" class="btn btn-info">Details</button></td>
-      </tr>
-      <tr>
-        <td>Tram 3</td>
-        <td>CCCC3</td>
-        <td>Transport Shipment C</td>
-		<td><button onclick="window.location='details3.html'" button type="button" class="btn btn-info">Details</button></td>
-      </tr>
-    </tbody>
-  </table>
+            <div class="container">
+                <h2>Device Selection</h2>
+                <table class="table table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th>Vehicle</th>
+                        <th>Hardware ID</th>
+                        <th>Purpose</th>
+                        <th>Details</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Tram 1</td>
+                        <td>AAAA1</td>
+                        <td>Transport Shipment A</td>
+                        <td>
+                            <button onclick="window.location='details1.html'" button type="button" class="btn btn-info">
+                                Details
+                            </button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Tram 2</td>
+                        <td>BBBB2</td>
+                        <td>Transport Shipment B</td>
+                        <td>
+                            <button onclick="window.location='details2.html'" button type="button" class="btn btn-info">
+                                Details
+                            </button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Tram 3</td>
+                        <td>CCCC3</td>
+                        <td>Transport Shipment C</td>
+                        <td>
+                            <button onclick="window.location='details3.html'" button type="button" class="btn btn-info">
+                                Details
+                            </button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!--Display Database here!-->
+            <p>Place database content here!</p>
+            <style>
+                #map {
+                    height: 400px;
+                    width: 100%;
+                }
+            </style>
+            </head>
+            <body>
+            <h3>My Google Maps Demo</h3>
+            Latitude: <input type="text" id="myLat" value="">
+            Longitude: <input type="text" id="myLon" value="">
+            <button onclick="corMap()" class="btn btn-info">Update Coordinates</button>
+            <div id="map"></div>
+            <script>
+                function initMap() {
+                    //var uluru = {lat: -25.363, lng: 131.044};
+                    //N = Positive
+                    //S = Negative
+                    //W = Negative
+                    //E = Positive
+                    var x = 33.9397;
+                    var y = -84.5197;
+                    //Vehicle 2 Coordinates
+                    var a = 40.8258;
+                    var b = -96.6852;
+                    //Vehicle 3 Coordinates
+                    var c = 34.0522;
+                    var d = -118.2437;
+
+                    function corMap() {
+                        var x = document.getElementById("myLat").value;
+                        var y = document.getElementById("myLon").value;
+                    }
+
+                    //var uluru = {lat: 33.9397, lng: -84.5197};
+                    var myCenter = {lat: c, lng: d};
+                    var mapCanvas = document.getElementById("map");
+                    var mapOptions = {center: myCenter, zoom: 4};
+                    var map = new google.maps.Map(mapCanvas, mapOptions);
+                    var marker = new google.maps.Marker({position: myCenter, animation: google.maps.Animation.BOUNCE});
+                    marker.setMap(map);
+                    // Zoom to 9 when clicking on marker
+                    google.maps.event.addListener(marker, 'click', function () {
+                        map.setZoom(9);
+                        map.setCenter(marker.getPosition());
+                    });
+                }
+            </script>
+            <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPYnUWFD4QdPmpw8d8iYBqZCaY_rnbTw8&callback=initMap">
+            </script>
+            <body>
+            <!--Commenting out login for now
+            <h2>Login Form</h2>
+
+            <form action="action_page.php">
+              <div class="imgcontainer">
+              </div>
+
+              <div class="container">
+                <label><b>Username</b></label>
+                <input type="text" placeholder="Enter Username" name="uname" required>
+
+                <label><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" name="psw" required>
+
+                <button type="button" class="btn btn-info">Log In</button>
+                <input type="checkbox" checked="checked"> Remember me
+              </div>
+            </form>
+            -->
+            <!--End of Login Form -->
+
+            <!--<p><script>generateText(50)</script></p>-->
+            </br>
+            </br>
+            </br>
+        </article>
+    </main>
+
+    <nav id="left" class="column">
+        <h3>Sort By:</h3>
+        <ul>
+            <!--SQL Statements to provide certain ordering-->
+            <!--Chronological-->
+            <li><a href="#">Date</a></li>
+            <!--Farthest to lowest? -->
+            <li><a href="#">Distance</a></li>
+            <li><a href="#">Location</a></li>
+            <li><a href="#">Activity</a></li>
+            <li><a href="#">Inactivity</a></li>
+        </ul>
+
+    </nav>
+
+    <div id="right" class="column">
+        <h3>Right heading</h3>
+        <!--<p> So long as there is breath in me, that long will I persist.
+        </br></br>For now I know one of the greatest principles of success; if I persist long enough I will win.</p>-->
+        <p>Far and away the best prize that life has to offer is the chance to work hard at work worth doing.</p>
+    </div>
+
 </div>
 
-			<!--Display Database here!-->
-			<p>Place database content here!</p>
-			<style>
-       #map {
-        height: 400px;
-        width: 100%;
-       }
-    </style>
-  </head>
-  <body>
-    <h3>My Google Maps Demo</h3>
-	Latitude: <input type="text" id="myLat" value="">
-	Longitude: <input type="text" id="myLon" value="">
-	<button onclick="corMap()" class="btn btn-info">Update Coordinates</button>
-    <div id="map"></div>
-    <script>
-      function initMap() {
-        //var uluru = {lat: -25.363, lng: 131.044};
-		//N = Positive
-		//S = Negative
-		//W = Negative
-		//E = Positive
-		var x = 33.9397;
-		var y = -84.5197;
-		//Vehicle 2 Coordinates
-		var a = 40.8258;
-		var b = -96.6852;
-		//Vehicle 3 Coordinates
-		var c = 34.0522;
-		var d = -118.2437;
-		function corMap()
-	{
-	var x = document.getElementById("myLat").value;
-	var y  = document.getElementById("myLon").value;
-	}
-		//var uluru = {lat: 33.9397, lng: -84.5197};
-		var myCenter = {lat: c, lng: d};
-		var mapCanvas = document.getElementById("map");
-		var mapOptions = {center: myCenter, zoom: 4};
-        var map = new google.maps.Map(mapCanvas, mapOptions);
-		var marker = new google.maps.Marker({position:myCenter, animation:google.maps.Animation.BOUNCE});
-		  marker.setMap(map);
-		 // Zoom to 9 when clicking on marker
-		google.maps.event.addListener(marker,'click',function() {
-		map.setZoom(9);
-		map.setCenter(marker.getPosition());
-  });
-      }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPYnUWFD4QdPmpw8d8iYBqZCaY_rnbTw8&callback=initMap">
-    </script>
-<body>
-<!--Commenting out login for now
-<h2>Login Form</h2>
-
-<form action="action_page.php">
-  <div class="imgcontainer">
-  </div>
-
-  <div class="container">
-    <label><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
-
-    <label><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-        
-    <button type="button" class="btn btn-info">Log In</button>
-    <input type="checkbox" checked="checked"> Remember me
-  </div>
-</form>
--->
-<!--End of Login Form -->
-
-				<!--<p><script>generateText(50)</script></p>-->
-				</br>
-				</br>
-				</br>
-			</article>								
-		</main>
-
-		<nav id="left" class="column">
-			<h3>Sort By:</h3>
-			<ul>
-			<!--SQL Statements to provide certain ordering-->
-			<!--Chronological-->
-				<li><a href="#">Date</a></li>
-				<!--Farthest to lowest? -->
-				<li><a href="#">Distance</a></li>
-				<li><a href="#">Location</a></li>
-				<li><a href="#">Activity</a></li>
-				<li><a href="#">Inactivity</a></li>
-			</ul>
-			
-		</nav>
-
-		<div id="right" class="column">
-			<h3>Right heading</h3>
-			<!--<p> So long as there is breath in me, that long will I persist. 
-			</br></br>For now I know one of the greatest principles of success; if I persist long enough I will win.</p>-->
-			<p>Far and away the best prize that life has to offer is the chance to work hard at work worth doing.</p>
-		</div>
-
-	</div>
-
-	<div id="footer-wrapper">
-		<footer id="footer"><p>RailServe</p></footer>
-	</div>
+<div id="footer-wrapper">
+    <footer id="footer"><p>RailServe</p></footer>
+</div>
 
 </body>
 
