--- a/Rail/Rail/static/CSS/front_page.css
+++ b/Rail/Rail/static/CSS/front_page.css
@@ -1,159 +1,138 @@
 /* Layout */
-		body {
-			min-width: 630px;
-		}
-		h2
-		{
-			text-align: center;
-			text-decoration: underline;
-		}
-        .table td
-        {
-            text-align: center;
-        }
-        #map
-        {
-            height: 400px;
-            width: 100%;
-        }
-        a
-        {
-            color: #FFFFFF;
-            text-decoration: none;
-        }
-		a:hover
-		{
-			background-color: #cccccc;
-		}
-        ul
-        {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            color: #FFFFFF;
-            text-decoration: none;
-        }
-		#header p
-		{
-			color: #FFFFFF;
-		}
+body {
+    min-width: 630px;
+}
 
-		#container {
-			padding-left: 200px;
-			padding-right: 190px;
-		}
+h2 {
+    text-align: center;
+    text-decoration: underline;
+}
 
-		#container .column {
-			position: relative;
-			float: left;
-		}
+a:hover {
+    background-color: #cccccc;
+}
 
-		#center {
-			padding: 10px 20px;
-			width: 100%;
-		}
+#header p {
+    color: #FFFFFF;
+}
 
-		#left {
-			width: 180px;
-			padding: 0 10px;
-			right: 240px;
-			margin-left: -100%;
-		}
+#container {
+    padding-left: 200px;
+    padding-right: 190px;
+}
 
-		#right {
-			width: 130px;
-			padding: 0 10px;
-			margin-right: -100%;
-		}
-		#right p
-		{
-			color: #fff;
-		}
+#container .column {
+    position: relative;
+    float: left;
+}
 
-		#footer {
-			clear: both;
-		}
+#center {
+    padding: 10px 20px;
+    width: 100%;
+}
 
-		/* IE hack */
-		* html #left {
-			left: 150px;
-		}
+#left {
+    width: 180px;
+    padding: 0 10px;
+    right: 240px;
+    margin-left: -100%;
+}
 
-		/* Make the columns the same height as each other */
-		#container {
-			overflow: hidden;
-		}
+#right {
+    width: 130px;
+    padding: 0 10px;
+    margin-right: -100%;
+}
 
-		#container .column {
-			padding-bottom: 1001em;
-			margin-bottom: -1000em;
-		}
+#right p {
+    color: #fff;
+}
 
-		/* Fix for the footer */
-		* html body {
-			overflow: hidden;
-		}
+#footer {
+    clear: both;
+}
 
-		* html #footer-wrapper {
-			float: left;
-			position: relative;
-			width: 100%;
-			padding-bottom: 10010px;
-			margin-bottom: -10000px;
-			background: #fff;
-			color: #FFFFFF;
-		}
+/* IE hack */
+* html #left {
+    left: 150px;
+}
 
-		/* Aesthetics */
-		body {
-			margin: 0;
-			padding: 0;
-			font-family:Sans-serif;
-			line-height: 1.5em;
-		}
+/* Make the columns the same height as each other */
+#container {
+    overflow: hidden;
+}
 
-		p {
-			color: #000000;
-		}
+#container .column {
+    padding-bottom: 1001em;
+    margin-bottom: -1000em;
+}
 
-		nav ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-		}
+/* Fix for the footer */
+* html body {
+    overflow: hidden;
+}
 
-		nav ul a {
-			color: #FFFFFF;
-			text-decoration: none;
-		}
+* html #footer-wrapper {
+    float: left;
+    position: relative;
+    width: 100%;
+    padding-bottom: 10010px;
+    margin-bottom: -10000px;
+    background: #fff;
+    color: #FFFFFF;
+}
 
-		#header, #footer {
-			font-size: large;
-			padding: 0.3em;
-			background: #4B4B4B;
+/* Aesthetics */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Sans-serif;
+    line-height: 1.5em;
+}
 
-		}
-		#footer p
-		{
-			color: #FFFFFF;
-		}
+p {
+    color: #000000;
+}
 
-		#left {
-			background: #5972F4;
-		}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
-		#right {
-			background: #5972F4;
-		}
+nav ul a {
+    color: #FFFFFF;
+    text-decoration: none;
+}
 
-		#center {
-			background: #fff;
-		}
+#header, #footer {
+    font-size: large;
+    padding: 0.3em;
+    background: #4B4B4B;
 
-		#container .column {
-			padding-top: 1em;
-		}
-		form {
+}
+
+#footer p {
+    color: #FFFFFF;
+}
+
+#left {
+    background: #5972F4;
+}
+
+#right {
+    background: #5972F4;
+}
+
+#center {
+    background: #fff;
+}
+
+#container .column {
+    padding-top: 1em;
+}
+
+form {
     border: 3px solid #f1f1f1;
 }
 
@@ -186,6 +165,7 @@ button {
     text-align: center;
     margin: 24px 0 12px 0;
 }
+
 .container {
     padding: 16px;
 }
@@ -198,82 +178,92 @@ span.psw {
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
     span.psw {
-       display: block;
-       float: none;
+        display: block;
+        float: none;
     }
+
     .cancelbtn {
-       width: 100%;
+        width: 100%;
     }
 }
-		/*This below contains the bootstrap
-		content for buttons */
-		.btn {
-  display: inline-block;
-  padding: 6px 12px;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
+
+/*This below contains the bootstrap
+content for buttons */
+.btn {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
+
 .btn:focus,
 .btn:active:focus,
 .btn.active:focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
 }
+
 .btn:hover,
 .btn:focus {
-  color: #333;
-  text-decoration: none;
+    color: #333;
+    text-decoration: none;
 }
+
 .btn:active,
 .btn.active {
-  background-image: none;
-  outline: 0;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-          box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
 }
+
 .btn.disabled,
 .btn[disabled],
 fieldset[disabled] .btn {
-  pointer-events: none;
-  cursor: not-allowed;
-  filter: alpha(opacity=65);
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  opacity: .65;
+    pointer-events: none;
+    cursor: not-allowed;
+    filter: alpha(opacity=65);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    opacity: .65;
 }
+
 .btn-default {
-  color: #333;
-  background-color: #fff;
-  border-color: #ccc;
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
 }
+
 .btn-default:hover,
 .btn-default:focus,
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-  color: #333;
-  background-color: #ebebeb;
-  border-color: #adadad;
+    color: #333;
+    background-color: #ebebeb;
+    border-color: #adadad;
 }
+
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-default.disabled,
 .btn-default[disabled],
 fieldset[disabled] .btn-default,
@@ -289,32 +279,37 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-  background-color: #fff;
-  border-color: #ccc;
+    background-color: #fff;
+    border-color: #ccc;
 }
+
 .btn-default .badge {
-  color: #fff;
-  background-color: #333;
+    color: #fff;
+    background-color: #333;
 }
+
 .btn-primary {
-  color: #fff;
-  background-color: #428bca;
-  border-color: #357ebd;
+    color: #fff;
+    background-color: #428bca;
+    border-color: #357ebd;
 }
+
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #fff;
-  background-color: #3276b1;
-  border-color: #285e8e;
+    color: #fff;
+    background-color: #3276b1;
+    border-color: #285e8e;
 }
+
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-primary.disabled,
 .btn-primary[disabled],
 fieldset[disabled] .btn-primary,
@@ -330,32 +325,37 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
-  border-color: #357ebd;
+    background-color: #428bca;
+    border-color: #357ebd;
 }
+
 .btn-primary .badge {
-  color: #428bca;
-  background-color: #fff;
+    color: #428bca;
+    background-color: #fff;
 }
+
 .btn-success {
-  color: #fff;
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
 }
+
 .btn-success:hover,
 .btn-success:focus,
 .btn-success:active,
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
-  color: #fff;
-  background-color: #47a447;
-  border-color: #398439;
+    color: #fff;
+    background-color: #47a447;
+    border-color: #398439;
 }
+
 .btn-success:active,
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-success.disabled,
 .btn-success[disabled],
 fieldset[disabled] .btn-success,
@@ -371,32 +371,37 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
 }
+
 .btn-success .badge {
-  color: #5cb85c;
-  background-color: #fff;
+    color: #5cb85c;
+    background-color: #fff;
 }
+
 .btn-info {
-  color: #fff;
-  background-color: #5bc0de;
-  border-color: #46b8da;
+    color: #fff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
 }
+
 .btn-info:hover,
 .btn-info:focus,
 .btn-info:active,
 .btn-info.active,
 .open .dropdown-toggle.btn-info {
-  color: #fff;
-  background-color: #39b3d7;
-  border-color: #269abc;
+    color: #fff;
+    background-color: #39b3d7;
+    border-color: #269abc;
 }
+
 .btn-info:active,
 .btn-info.active,
 .open .dropdown-toggle.btn-info {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-info.disabled,
 .btn-info[disabled],
 fieldset[disabled] .btn-info,
@@ -412,32 +417,37 @@ fieldset[disabled] .btn-info:active,
 .btn-info.disabled.active,
 .btn-info[disabled].active,
 fieldset[disabled] .btn-info.active {
-  background-color: #5bc0de;
-  border-color: #46b8da;
+    background-color: #5bc0de;
+    border-color: #46b8da;
 }
+
 .btn-info .badge {
-  color: #5bc0de;
-  background-color: #fff;
+    color: #5bc0de;
+    background-color: #fff;
 }
+
 .btn-warning {
-  color: #fff;
-  background-color: #f0ad4e;
-  border-color: #eea236;
+    color: #fff;
+    background-color: #f0ad4e;
+    border-color: #eea236;
 }
+
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning:active,
 .btn-warning.active,
 .open .dropdown-toggle.btn-warning {
-  color: #fff;
-  background-color: #ed9c28;
-  border-color: #d58512;
+    color: #fff;
+    background-color: #ed9c28;
+    border-color: #d58512;
 }
+
 .btn-warning:active,
 .btn-warning.active,
 .open .dropdown-toggle.btn-warning {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-warning.disabled,
 .btn-warning[disabled],
 fieldset[disabled] .btn-warning,
@@ -453,32 +463,37 @@ fieldset[disabled] .btn-warning:active,
 .btn-warning.disabled.active,
 .btn-warning[disabled].active,
 fieldset[disabled] .btn-warning.active {
-  background-color: #f0ad4e;
-  border-color: #eea236;
+    background-color: #f0ad4e;
+    border-color: #eea236;
 }
+
 .btn-warning .badge {
-  color: #f0ad4e;
-  background-color: #fff;
+    color: #f0ad4e;
+    background-color: #fff;
 }
+
 .btn-danger {
-  color: #fff;
-  background-color: #d9534f;
-  border-color: #d43f3a;
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
 }
+
 .btn-danger:hover,
 .btn-danger:focus,
 .btn-danger:active,
 .btn-danger.active,
 .open .dropdown-toggle.btn-danger {
-  color: #fff;
-  background-color: #d2322d;
-  border-color: #ac2925;
+    color: #fff;
+    background-color: #d2322d;
+    border-color: #ac2925;
 }
+
 .btn-danger:active,
 .btn-danger.active,
 .open .dropdown-toggle.btn-danger {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-danger.disabled,
 .btn-danger[disabled],
 fieldset[disabled] .btn-danger,
@@ -494,243 +509,256 @@ fieldset[disabled] .btn-danger:active,
 .btn-danger.disabled.active,
 .btn-danger[disabled].active,
 fieldset[disabled] .btn-danger.active {
-  background-color: #d9534f;
-  border-color: #d43f3a;
+    background-color: #d9534f;
+    border-color: #d43f3a;
 }
+
 .btn-danger .badge {
-  color: #d9534f;
-  background-color: #fff;
+    color: #d9534f;
+    background-color: #fff;
 }
+
 .btn-link {
-  font-weight: normal;
-  color: #428bca;
-  cursor: pointer;
-  border-radius: 0;
+    font-weight: normal;
+    color: #428bca;
+    cursor: pointer;
+    border-radius: 0;
 }
+
 .btn-link,
 .btn-link:active,
 .btn-link[disabled],
 fieldset[disabled] .btn-link {
-  background-color: transparent;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
+
 .btn-link,
 .btn-link:hover,
 .btn-link:focus,
 .btn-link:active {
-  border-color: transparent;
+    border-color: transparent;
 }
+
 .btn-link:hover,
 .btn-link:focus {
-  color: #2a6496;
-  text-decoration: underline;
-  background-color: transparent;
+    color: #2a6496;
+    text-decoration: underline;
+    background-color: transparent;
 }
+
 .btn-link[disabled]:hover,
 fieldset[disabled] .btn-link:hover,
 .btn-link[disabled]:focus,
 fieldset[disabled] .btn-link:focus {
-  color: #999;
-  text-decoration: none;
+    color: #999;
+    text-decoration: none;
 }
+
 .btn-lg,
 .btn-group-lg > .btn {
-  padding: 10px 16px;
-  font-size: 18px;
-  line-height: 1.33;
-  border-radius: 6px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 6px;
 }
+
 .btn-sm,
 .btn-group-sm > .btn {
-  padding: 5px 10px;
-  font-size: 12px;
-  line-height: 1.5;
-  border-radius: 3px;
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
 }
+
 .btn-xs,
 .btn-group-xs > .btn {
-  padding: 1px 5px;
-  font-size: 12px;
-  line-height: 1.5;
-  border-radius: 3px;
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
 }
+
 .btn-block {
-  display: block;
-  width: 100%;
-  padding-right: 0;
-  padding-left: 0;
+    display: block;
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
 }
+
 .btn-block + .btn-block {
-  margin-top: 5px;
+    margin-top: 5px;
 }
+
 input[type="submit"].btn-block,
 input[type="reset"].btn-block,
 input[type="button"].btn-block {
-  width: 100%;
+    width: 100%;
 }
+
 /*Also added table bootstrap*/
 .table {
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 1rem;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
 }
 
 .table th,
 .table td {
-  padding: 0.75rem;
-  vertical-align: top;
-  border-top: 1px solid #eceeef;
+    padding: 0.75rem;
+    vertical-align: top;
+    border-top: 1px solid #eceeef;
 }
 
 .table thead th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #eceeef;
+    vertical-align: bottom;
+    border-bottom: 2px solid #eceeef;
 }
 
 .table tbody + tbody {
-  border-top: 2px solid #eceeef;
+    border-top: 2px solid #eceeef;
 }
 
 .table .table {
-  background-color: #fff;
+    background-color: #fff;
 }
 
 .table-sm th,
 .table-sm td {
-  padding: 0.3rem;
+    padding: 0.3rem;
 }
 
 .table-bordered {
-  border: 1px solid #eceeef;
+    border: 1px solid #eceeef;
 }
 
 .table-bordered th,
 .table-bordered td {
-  border: 1px solid #eceeef;
+    border: 1px solid #eceeef;
 }
 
 .table-bordered thead th,
 .table-bordered thead td {
-  border-bottom-width: 2px;
+    border-bottom-width: 2px;
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 .table-hover tbody tr:hover {
-  background-color: rgba(0, 0, 0, 0.075);
+    background-color: rgba(0, 0, 0, 0.075);
 }
 
 .table-active,
 .table-active > th,
 .table-active > td {
-  background-color: rgba(0, 0, 0, 0.075);
+    background-color: rgba(0, 0, 0, 0.075);
 }
 
 .table-hover .table-active:hover {
-  background-color: rgba(0, 0, 0, 0.075);
+    background-color: rgba(0, 0, 0, 0.075);
 }
 
 .table-hover .table-active:hover > td,
 .table-hover .table-active:hover > th {
-  background-color: rgba(0, 0, 0, 0.075);
+    background-color: rgba(0, 0, 0, 0.075);
 }
 
 .table-success,
 .table-success > th,
 .table-success > td {
-  background-color: #dff0d8;
+    background-color: #dff0d8;
 }
 
 .table-hover .table-success:hover {
-  background-color: #d0e9c6;
+    background-color: #d0e9c6;
 }
 
 .table-hover .table-success:hover > td,
 .table-hover .table-success:hover > th {
-  background-color: #d0e9c6;
+    background-color: #d0e9c6;
 }
 
 .table-info,
 .table-info > th,
 .table-info > td {
-  background-color: #d9edf7;
+    background-color: #d9edf7;
 }
 
 .table-hover .table-info:hover {
-  background-color: #c4e3f3;
+    background-color: #c4e3f3;
 }
 
 .table-hover .table-info:hover > td,
 .table-hover .table-info:hover > th {
-  background-color: #c4e3f3;
+    background-color: #c4e3f3;
 }
 
 .table-warning,
 .table-warning > th,
 .table-warning > td {
-  background-color: #fcf8e3;
+    background-color: #fcf8e3;
 }
 
 .table-hover .table-warning:hover {
-  background-color: #faf2cc;
+    background-color: #faf2cc;
 }
 
 .table-hover .table-warning:hover > td,
 .table-hover .table-warning:hover > th {
-  background-color: #faf2cc;
+    background-color: #faf2cc;
 }
 
 .table-danger,
 .table-danger > th,
 .table-danger > td {
-  background-color: #f2dede;
+    background-color: #f2dede;
 }
 
 .table-hover .table-danger:hover {
-  background-color: #ebcccc;
+    background-color: #ebcccc;
 }
 
 .table-hover .table-danger:hover > td,
 .table-hover .table-danger:hover > th {
-  background-color: #ebcccc;
+    background-color: #ebcccc;
 }
 
 .thead-inverse th {
-  color: #fff;
-  background-color: #292b2c;
+    color: #fff;
+    background-color: #292b2c;
 }
 
 .thead-default th {
-  color: #464a4c;
-  background-color: #eceeef;
+    color: #464a4c;
+    background-color: #eceeef;
 }
 
 .table-inverse {
-  color: #fff;
-  background-color: #292b2c;
+    color: #fff;
+    background-color: #292b2c;
 }
 
 .table-inverse th,
 .table-inverse td,
 .table-inverse thead th {
-  border-color: #fff;
+    border-color: #fff;
 }
 
 .table-inverse.table-bordered {
-  border: 0;
+    border: 0;
 }
 
 .table-responsive {
-  display: block;
-  width: 100%;
-  overflow-x: auto;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 .table-responsive.table-bordered {
-  border: 0;
+    border: 0;
 }
 
